fix text wrap

--- a/src/Pages/Post/PostContent.scss
+++ b/src/Pages/Post/PostContent.scss
@@ -13,7 +13,7 @@
 .title {
     text-align: center;
     padding: 20px 0px;
-    text-wrap: balance;
+    white-space: normal balance;
     // max-width: 100%;
 }
 
